# Web-Autoscaler

./: .gitignore  README.md  requirements.txt
src/data_processing/: preprocess_data.py
src/modeling/: cluster_training.ipynb  data_preview.ipynb  dummy_data.py  gridsearch.py  preprocessing.ipynb  pyproject.toml  training.ipynb  training_new_1.ipynb  training_new_v2.ipynb  training_new_v5.ipynb
src/modeling/data/: df_cleaned.csv  traffic_data.csv
src/modeling/data/new_data/: preprocessed_data_cluster_1.csv  preprocessed_data_cluster_2.csv  preprocessed_data_cluster_3.csv  preprocessed_data_cluster_4.csv  preprocessed_data_cluster_5.csv  preprocessed_data_cluster_6.csv  preprocessed_data_cluster_7.csv  preprocessed_data_cluster_8.csv
src/modeling/data/processed/: traffic_data_processed.csv
src/modeling/data/smoothed/: smoothed_cluster_1.csv  smoothed_cluster_2.csv  smoothed_cluster_3.csv  smoothed_cluster_4.csv  smoothed_cluster_5.csv  smoothed_cluster_6.csv  smoothed_cluster_7.csv  smoothed_cluster_8.csv
src/modeling/data/test/: test_data.pkl  test_data_preview.csv
src/modeling/models/: config.pkl  config_v2.pkl  config_v3.pkl  config_v5.pkl  scaler.pkl  scaler_v3.pkl  scaler_v5.pkl  traffic_predictor.pth  traffic_predictor_v2.pth  traffic_predictor_v3.pth  traffic_predictor_v5.pth
src/simulation/: README.md  baselineReactiveAutoscaler.py  evaluate.py  figures.py  model_wrapper.py  policies.py  simulator.py
