[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "scikit-learn>=1.7.2",
    "torch",
    "torchvision",
    "torchaudio",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
